tests/NormalTests/paczka1/fuzzy1/72501406.err
Error in line 4: qtbjjHioS6 S424 57,9
Error in line 1: A549 S424 13,5
Error in line 5: s2a S423 88,1
Error in line 15: s2a A549 85,1
Error in line 24: A549 A549 47,2
Error in line 28: KfsATB S424 13,1
Error in line 33: qtbjjHioS6 S623 36,8
